# wec_as_multiport

./: .gitignore  CITATION.cff  COPYRIGHT.md  README.md  environment.yml  pyproject.toml  test_wec_as_multiport.py  wec_as_multiport.ipynb  wec_as_multiport.py
.github/workflows/: python-app.yml  writeapaper.yml
matlab/: fix_bem_spikes.m  wec_as_multiport_math.mlx  wec_as_multiport_math_mech_load_impedance.mlx
matlab/BEMIO/: writeBEMIOH5.m
paper/: secSteadyInput.tex  wec_as_multiport.bib  wec_as_multiport.tex
papers/template/: template.py  template.tex
papers/wec_as_multiport/: wec_as_multiport.bib  wec_as_multiport.ipynb  wec_as_multiport.tex
papers/wec_as_multiport/matlab/: checkDerivation.m
src/: test_wec_as_multiport.py  wec_as_multiport.ipynb  wec_as_multiport.py
tests/: test_wec_as_multiport.py
wec_as_multiport/: __init__.py  core.py  util.py
