[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wec_as_multiport"]

[project]
name = "wec_as_multiport"
version = "0.0.1"
description = "WEC as a multiport"
authors = [
    {name = "Sandia National Laboratories"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20, <2.0",
    "scipy",
    "xarray==2025.3.1",
    "autograd",
    "capytaine>=2.2",
    "joblib",
    "wavespectra>=3.13",
    "netcdf4",
    "ipykernel",
    "ipython",
    "nbconvert",
    "wecopttool[geometry]<=3.0",
    "pytest",    
    "ipywidgets",
    "fpdf",
]
